6/14: Fix white space

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -176,6 +176,10 @@ body {
 /*--------------------------------------
         SELECTORS
 ---------------------------------------*/
+
+* {
+  white-space: pre-wrap;
+}
 a p {
     text-align: center;
   }
